<resources>
    <string name="app_name">Inventory App</string>

    <!-- Title for the activity to add item-->
    <string name="item_editor_activity">Add jewelery item</string>

    <!-- ID for the stock id -->
    <string name="stock_id">Stock id : </string>

    <!-- Hint for the edit view stock id -->
    <string name="item_stock_id">type stock id</string>

    <!--Label for overflow menu option that insert fake inventory data into the app[CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all the jewelry data in the app[CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Rings</string>

    <!-- Label for editor menu option to save ring and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current ring [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Lable for the supplier-->
    <string name="supplier">Supplier :</string>

    <!-- Hint for the edit view supplier-->
    <string name="supplier_name">type supplier name</string>

    <!-- Label for the description -->
    <string name="description">Details :</string>

    <!-- hint for the edit view details -->
    <string name="type_details">type Description</string>

    <!-- Label for the quantity textView-->
    <string name="quantity">Quantity :</string>

    <!-- hint for quantity -->
    <string name="item_quantity">type Quantity</string>

    <!-- Label for cost -->
    <string name="item_cost">Cost :</string>

    <!-- hint for cost -->
    <string name="type_cost">type Cost</string>

    <!-- label for price -->
    <string name="Price">Price :</string>

    <!-- hint for price -->
    <string name="type_price">type Price</string>

    <!-- Toast message in editor when ring has failed to be inserted[CHAR LIMIT=NONE]-->
    <string name="editor_insert_ring_failed">Error with saving ring</string>

    <!-- TOAST message in editor when new ring has been successfully inserted[CHAR LIMIT=NONE]-->
    <string name="editor_insert_ring_successful">Ring saved</string>

    <!-- Title for the activity to add a new ring [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_ring">Add a Ring</string>

    <!-- title for the activity to add anew ring[CHAR LIMIT=20] -->
    <string name="editor_activity_edit_ring">Edit Ring</string>

    <!-- Toast message in editor when current ring was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_ring_successful">ring updated</string>

    <!-- Toast message in editor when current ring has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_ring_failed">Error with updating ring</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current ring [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current ring was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_ring_successful">ring deleted</string>

    <!-- Toast message in editor when current ring has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_ring_failed">Error with deleting ring</string>

    <!-- Dialog message to ask the user to confirm deleting the current ring [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this ring?</string>

    <!-- Dialog button text for the option to confirm deleting the current ring [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current ring [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog button text for the option to keep filling the fields-->
    <string name="categories_dialog_msg">All Categories must be complete Want to leave?</string>

    <string name="re_order_button">Order</string>

    <string name="sold_button">Sold</string>

    <string name="empty_view_title_text">You have an empty database</string>
    <string name="empty_view_subtitle_text">Get started by adding a ring</string>
</resources>
