<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- Stock id textView -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--label-->
        <TextView
            android:id="@+id/stock_id"
            android:text="@string/stock_id"
            style="@style/CategoryStyle"/>

        <!-- input fields -->
        <EditText
            android:id="@+id/edit_stock_id"
            android:hint="@string/item_stock_id"
            android:layout_toRightOf="@id/stock_id"
            android:inputType="number"
            style="@style/EditorFieldStyle"/>

    </RelativeLayout>

    <!-- supplier textView -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--label-->
        <TextView
            android:id="@+id/supplier"
            android:text="@string/supplier"
            style="@style/CategoryStyle"/>

        <!-- input fields -->
        <EditText
            android:id="@+id/edit_supplier_name"
            android:hint="@string/supplier_name"
            android:layout_toRightOf="@id/supplier"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle"/>

    </RelativeLayout>

    <!-- description textView -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--label-->
        <TextView
            android:id="@+id/details"
            android:text="@string/description"
            style="@style/CategoryStyle"/>

        <!-- input fields -->
        <EditText
            android:id="@+id/edit_details"
            android:hint="@string/type_details"
            android:layout_toRightOf="@id/details"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle"/>

    </RelativeLayout>

    <!-- quantity textView -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--label-->
        <TextView
            android:id="@+id/quantity"
            android:text="@string/quantity"
            style="@style/CategoryStyle"/>

        <!-- button for decrease -->
        <Button
            android:id="@+id/decrease_button"
            android:layout_width="48dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/quantity"
            android:text="-"/>

        <!-- text view for quantity-->
        <EditText
            android:id="@+id/show_quantity"
            android:layout_width="48dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_toRightOf="@id/decrease_button" />

        <!-- button for increase -->
        <Button
            android:id="@+id/increase_button"
            android:layout_width="48dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/show_quantity"
            android:text="+"/>

    </RelativeLayout>

    <!-- cost textView -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--label-->
        <TextView
            android:id="@+id/cost"
            android:text="@string/item_cost"
            style="@style/CategoryStyle"/>

        <!-- input fields -->
        <EditText
            android:id="@+id/edit_cost"
            android:hint="@string/type_cost"
            android:inputType="number"
            android:layout_toRightOf="@id/cost"
            style="@style/EditorFieldStyle" />

    </RelativeLayout>

    <!-- price textView -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--label-->
        <TextView
            android:id="@+id/price"
            android:text="@string/Price"
            style="@style/CategoryStyle"/>

        <!-- input fields -->
        <EditText
            android:id="@+id/edit_price"
            android:hint="@string/type_price"
            android:inputType="number"
            android:layout_toRightOf="@id/price"
            style="@style/EditorFieldStyle" />


    </RelativeLayout>

    <!-- buttons buttonView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/sold_button"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sold_button"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/re_order_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/re_order_button" />
    </LinearLayout>


</LinearLayout>